# serializer version: 1
# name: test_pipe_ok[pipe_from]
  '''
  start
    query_statement
      query_expr
        pipe_from
          from_clause
            bigquery__from_item_table
              bigquery__path_expression
                bigquery__ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      bigquery__column_expr
                        bigquery__ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    bigquery__column_expr
                      bigquery__ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      bigquery__column_expr
                        bigquery__ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        bigquery__column_expr
                          bigquery__ident	col1
                  bigquery__select_from
                    from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      bigquery__column_expr
                        bigquery__ident	col1
  
  '''
# ---
